Add link to iex file reference

--- a/content/notes/programming/languages/elixir.adoc
+++ b/content/notes/programming/languages/elixir.adoc
@@ -69,4 +69,4 @@ iex> %Type{}
 }
 ----
 
-Much quicker!
+Much quicker! You can read more about the `.iex.exs` file here: https://hexdocs.pm/iex/IEx.html#module-the-iex-exs-file
