--- a/content/notes/programming/tools/image-conversion.adoc
+++ b/content/notes/programming/tools/image-conversion.adoc
@@ -3,6 +3,16 @@ Marcus Crane <marcus@utf9k.net>
 :page-permalink: /notes/programming/tools/image-conversion
 :toc:
 
+== Image metadata
+
+You can use the `identify` tool to get basic metadata about an image
+
+[source, bash]
+----
+> identify jira.svg
+jira.svg SVG 240x240 240x240+0+0 8-bit sRGB 8.67KB 0.000u 0:00.000
+----
+
 == SVG -> PNG
 
 While ImageMagick/GraphicsMagick supports SVG conversion, some users recommend trying out Inkscape instead
