Updated styling to be more generic

--- a/content/reviews/asuras-wrath.adoc
+++ b/content/reviews/asuras-wrath.adoc
@@ -100,8 +100,7 @@ animation for being a bit sketchy in places.
 
 I can't really say I blame CyberConnect2 for releasing Act 4 as DLC. **This
 entire project was very much an experiment and the sales reflect that**. In
-the 2 years since release, it only just barely passed http://www.vgchartz.com/gamedb/?name=asura%27s+wrath[500K units
-moved] which really makes me sad. I'm guessing the IP will just be thrown
+the 2 years since release, it only just barely passed https://www.vgchartz.com/gamedb/?name=asura%27s+wrath[500K units moved] which really makes me sad. I'm guessing the IP will just be thrown
 back in the vault while Capcom pumps out more Street Fighter or whatever it is
 they're doing nowdays. **I think that if I were ever asked to compile a list
 of my top 10 favourite anime, I 'd genuinely consider having Asura's Wrath on
