--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -6,6 +6,14 @@
 
 === October
 
+==== 30th
+
+* Reset + recreated CSS to focus on readability. I'll need to reimplement some previously existing styles such as code highlighting, tables and so on but for now, I'm just going to roll out the changes incrementally.
+
+==== 29th
+
+* Added some tips for getting image metadata and converting SVGs to PNGs link:/notes/programming/tools/image-conversion[»]
+
 ==== 21st
 
 * Added a tip about automatically importing and/or aliasing modules in IEX link:/notes/programming/languages/elixir#automatically-aliasing-modules-when-starting-iex[»]
