--- a/index.adoc
+++ b/index.adoc
@@ -15,7 +15,7 @@ I'm around the web in a bunch of places: https://github.com/marcus-crane[github]
 == Blog
 
 ++++
-{% assign blog_posts = site.pages | where_exp: "item", "item.dir == '/blog/'" | sort: "date" | reverse %}
+{% assign blog_posts = site.pages | where_exp: "item", "item.dir == '/blog/'" | where_exp: "item", "item.draft != true" | sort: "date" | reverse %}
 {% for post in blog_posts %}
 	<li>{{ post.date | date: "%d/%m/%Y" }} <a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
