--- a/content/blog/arch-nuc-install.adoc
+++ b/content/blog/arch-nuc-install.adoc
@@ -1,3 +1,7 @@
+---
+title: "Installing Arch Linux on my Intel NUC"
+date: 2017-12-24
+---
 = Installing Arch Linux on my Intel NUC
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2017-12-24
