--- a/content/blog/email-lookup.adoc
+++ b/content/blog/email-lookup.adoc
@@ -1,3 +1,6 @@
+---
+title: "Double checking if an email address exists"
+---
 = Double checking if an email address exists
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2019-09-26
