--- a/content/notes/books/the-phoenix-project.adoc
+++ b/content/notes/books/the-phoenix-project.adoc
@@ -1,3 +1,6 @@
+---
+title: "The Phoenix Project"
+---
 = The Phoenix Project
 Marcus Crane <marcus@utf9k.net>
 :page-permalink: /notes/books/the-phoenix-project
