--- a/content/notes/programming/languages/powershell.adoc
+++ b/content/notes/programming/languages/powershell.adoc
@@ -1,3 +1,6 @@
+---
+title: "Powershell"
+---
 = Powershell
 Marcus Crane <marcus@utf9k.net>
 :page-permalink: /notes/programming/languages/powershell
