--- a/content/notes/programming/tools/image-conversion.adoc
+++ b/content/notes/programming/tools/image-conversion.adoc
@@ -1,3 +1,6 @@
+---
+title: "Image conversion"
+---
 = Image conversion
 Marcus Crane <marcus@utf9k.net>
 :page-permalink: /notes/programming/tools/image-conversion
