--- a/content/blog/email-lookup.adoc
+++ b/content/blog/email-lookup.adoc
@@ -1,10 +1,10 @@
 ---
 title: "Double checking if an email address exists"
+date: 2019-09-26
 ---
 = Double checking if an email address exists
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2019-09-26
-:page-layout: post
 :page-permalink: /blog/email-lookup
 :page-tags: [email, tip, telnet, nslookup]
 :source-highlighter: rouge
