--- a/content/blog/lore-tabs.adoc
+++ b/content/blog/lore-tabs.adoc
@@ -1,7 +1,10 @@
+---
+title: "Humans don't come with lore tabs"
+date: 2018-02-28
+---
 = Humans don't come with lore tabs
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2018-02-28
-:page-layout: post
 :page-permalink: /blog/lore-tabs
 :page-tags: [people]
 
