--- a/content/blog/lost-python-results.adoc
+++ b/content/blog/lost-python-results.adoc
@@ -1,7 +1,10 @@
+---
+title: "Recovering lost python results in the REPL"
+date: 2018-12-12
+---
 = Recovering lost Python results in the REPL
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2018-12-12
-:page-layout: post
 :page-permalink: /blog/lost-python-results
 :page-tags: [python, snippet]
 :source-highlighter: rouge
