--- a/content/blog/nz-oia-guide.adoc
+++ b/content/blog/nz-oia-guide.adoc
@@ -1,7 +1,10 @@
+---
+title: "A brief guide to OIAs in New Zealand"
+date: 2018-08-18
+---
 = A brief guide to OIAs in New Zealand
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2018-08-18
-:page-layout: post
 :page-permalink: /blog/nz-oia-guide
 :page-tags: [government, nz, oia, guide]
 :toc:
