--- a/content/blog/retrieving-jenkins-credentials.adoc
+++ b/content/blog/retrieving-jenkins-credentials.adoc
@@ -1,8 +1,11 @@
+---
+title: "Retrieving credentials from Jenkins"
+date: 2019-07-29
+---
 = Retrieving credentials from Jenkins
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2019-07-29
 :imagesdir: /static/img/jenkins-credentials
-:page-layout: post
 :page-permalink: /blog/retrieving-jenkins-credentials
 :page-tags: [jenkins, security]
 
