--- a/content/blog/wiki-thoughts.adoc
+++ b/content/blog/wiki-thoughts.adoc
@@ -1,7 +1,10 @@
+---
+title: "Some thoughts about running a wiki"
+date: 2017-12-18
+---
 = Some thoughts about running a wiki
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2017-12-18
-:page-layout: post
 :page-permalink: /blog/wiki-thoughts
 :page-tags: [community, leadership, wiki]
 
