--- a/content/reviews/asuras-wrath.adoc
+++ b/content/reviews/asuras-wrath.adoc
@@ -1,7 +1,10 @@
+---
+title: "Asura's Wrath"
+date: 2014-12-23
+---
 = Asura's Wrath
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2014-12-23
-:page-layout: post
 :page-permalink: /reviews/asuras-wrath
 
 If you've heard of this title before but have yet to play it, I'm going to
