--- a/content/reviews/yakuza.adoc
+++ b/content/reviews/yakuza.adoc
@@ -1,7 +1,10 @@
+---
+title: "Yakuza"
+date: 2015-01-03
+---
 = Yakuza
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2015-01-03
-:page-layout: post
 :page-permalink: /reviews/yakuza
 
 You're just in time as we're about to dive into Japan's criminal underworld. I
