--- a/archetypes/blog.adoc
+++ b/archetypes/blog.adoc
@@ -5,6 +5,7 @@ draft: true
 ---
 = {{ replace .Name "-" " " | title }}
 Marcus Crane <marcus@utf9k.net>
+:imagesdir: /static/img/{{ replace .Name "-" " " }}
 :page-date: {{ .Date }}
 :page-permalink: /blog/{{ replace .Name "-" " " }}
 :page-tags: []
