--- a/content/blog/automation-right.adoc
+++ b/content/blog/automation-right.adoc
@@ -5,7 +5,7 @@ date: 2018-12-03
 = When automation goes horribly right
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2018-12-03
-:imagesdir: /static/img/automation-right
+:imagesdir: /img/automation-right
 :page-permalink: /blog/automation-right
 :page-tags: [automation, microservices, twitter]
 
