--- a/content/blog/deepfakes.adoc
+++ b/content/blog/deepfakes.adoc
@@ -5,7 +5,7 @@ date: 2017-02-05
 = Deepfakes
 Marcus Crane <marcus@utf9k.net>
 :page-date: 2017-02-05
-:imagesdir: /static/img/deepfakes
+:imagesdir: /img/deepfakes
 :page-permalink: /blog/deepfakes
 :page-tags: [technology, future, deepfakes]
 :toc: preamble
