* Started porting Deepfakes post to org * Ported lore tabs to org * Ported Python results to org

--- a/content/blog/deepfakes.org
+++ b/content/blog/deepfakes.org
@@ -10,7 +10,7 @@ I've made some slight rewordings, fixed typos and revived any links I could usin
 
 {{< contents >}}
 
-## An overview
+* An overview
 
 Just under 2 weeks ago, an article from The Verge titled [Fake celebrity porn is blowing up on Reddit, thanks to artificial intelligence](https://www.theverge.com/2018/1/24/16929148/fake-celebrity-porn-ai-deepfake-face-swapping-artificial-intelligence-reddit) was posted on [Hacker News](https://news.ycombinator.com/item?id=16226495). If you'd just glimpsed the headline, you might assume it's a bunch of shitstirrers up to no good with Photoshop but unfortunately, it's arguably worse.
 
@@ -20,11 +20,11 @@ I felt like the downsides were glaringly obvious at first but after discussing t
 
 Given my feelings on the matter, which can be summed up as "Oh fuck", this is my attempt at rounding up both my own thoughts and those posted in the various discussion threads that followed. Before we begin, I should explain a bit more about this technology and how it works. This isn't a master class on machine learning by any means. It's designed to be ["as simple as possible, but not simpler"](https://quoteinvestigator.com/2011/05/13/einstein-simple/), mainly because my understanding of the concepts involved is surface level at best. For anything deeper, you should seek out other sources.
 
-## What are deepfakes?
+* What are deepfakes?
 
 [deepfakes](https://www.reddit.com/user/deepfakes) is the name of a user on reddit who "pioneered" this new wave of computer-generated celebrity pornography. To further promote discussion, and share generated works, he created a subreddit named after himself – [/r/deepfakes](https://reddit.com/r/deepfakes). The term *deepfake* has since been coined to refer to the creations that followed and it's the term I'll be using going forward.
 
-## What is machine learning?
+* What is machine learning?
 
 While the term "machine learning" might invoke visions of [Skynet](https://en.wikipedia.org/wiki/Skynet_(Terminator)), it's worth noting that said machines aren't truly conscious like us humans. You'd think the ability to be self-aware and/or concious would be essential to learning, right? At its simplest, learning requires little more than a series of inputs (sound, sight, touch) which we then process in order to produce an output. When you first meet someone, you may forget their face but over time, you learn to recognise them as memories form. As time progresses, you can also identify them in different contexts such as an office, an airport or at a beach. In a rough sense, you've trained your brain to subconsciously identify their facial features so that it can recall which memories they've appeared in before.
 
@@ -32,7 +32,7 @@ Another crucial part of learning is the ability to weigh up how confident we are
 
 It's a bit hand wavy but in essence, those are the two important elements. A machine "learns" by being fed data continuously and having its output judged. A facial detection network may be trained on photos of a single person, just like in our memory analogy, and then asked to identify if they are present in a handful of photos. It would respond Yes or No along with its level of confidence which can be checked against the actual answer. Those results are then fed back into the machine and it continues to improve itself as time goes on. The next training step of such an example might be continuously seeing if wanted criminals appear in live CCTV footage of an airport.
 
-## So how do deepfakes work?
+* So how do deepfakes work?
 
 How does this all relate to deepfakes? Well, it's a type of neural network. A what now, you say? It's essentially what I just described, which is a network that takes an output, does some unknown (hidden) calculations in the middle and returns an output. There are many different networks, with different numbers of inputs and outputs but in the case of deepfakes, we're only dealing with one of each. There's a [breakdown](https://web.archive.org/web/20180206231055/https://www.reddit.com/r/deepfakes/comments/7pgcg4/detailed_explanation_of_the_algorithm/) of how it functions but I felt it wasn't detailed enough for the casual observer.
 
@@ -58,7 +58,7 @@ Without much in the way of deeply detailed explanations to go on, this is my bes
 
 I chose the clip above because it provides a good indication of what works but also what can go wrong. There's a number of instances where the result is miserable, such as 1:09 where multiple facial expressions flash one after the other. Often times, the edges of the overlaid face can clearly be seen, giving an idea of which elements have been replaced. All in all though, the result can be frighteningly accurate, just with the small amount of code that the creator referred to as ["embarassingly simple" (dead link)](https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/dr8hk8e/).
 
-## Is this bad?
+* Is this bad?
 
 Well, that's really up to your own personal beliefs, isn't it? It would seem to be a moral issue at best, as technically it doesn't seem to be illegal. An interviewee in [this Wired story](https://www.wired.com/story/face-swap-porn-legal-limbo/) sums it up as far as US law is concerned: "There are all sorts of First Amendment problems because it’s not their real body.". The assumption seems to be that any such creations could be considered art, not unlike a painting or a photoshop edit, which is legally understandable, but still feels a bit ethically shady.
 
@@ -66,13 +66,13 @@ The obvious societal issue here is that it's presumably the next step in being a
 
 Anyway, there's no point preaching to the choir on this. Those who get off on this stuff can easily justify it to themselves because "lol it's not actually them, its fake!!". I wouldn't be surprised if there's a teenager in awe right now who becomes the real life [Robert Daly](https://en.wikipedia.org/wiki/USS_Callister).
 
-## What next?
+* What next?
 
-While it's easy to think one man has started this all, he does [have a point (dead link)](https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/drbv6io/) in that this really was inevitable. There are other projects that are more concerning, not for where they could lead, but for what they can do right now. 
+While it's easy to think one man has started this all, he does [[https://www.reddit.com/r/deepfakes/comments/7jqvny/release_face_swap_model_tool/drbv6io/][have a point (dead link)]] in that this really was inevitable. There are other projects that are more concerning, not for where they could lead, but for what they can do right now.
 
-This post has already gone on long enough so here's a few proof of concepts off the top of my head that give an indication of where we're headed:
+This post has already gone on long enough so here's a few proof of concepts off the top of my head that give an indication of where we're headed
 
-* [Face2Face](https://youtu.be/ohmajJTcpNk?t=160)
-* [Disney's FaceDirector](https://youtu.be/o-nJpaCXL0k?t=212)
-* [Adobe VoCo](https://youtu.be/I3l4XLZ59iw?t=199)
-* [Synthesizing Obama: Learning Lip Sync from Audio](https://youtu.be/9Yq67CjDqvw?t=107)
+- [[https://youtu.be/ohmajJTcpNk?t=160][Face2Face]]
+- [[https://youtu.be/o-nJpaCXL0k?t=212][Disney's FaceDirector]]
+- [[https://youtu.be/I3l4XLZ59iw?t=199][Adobe VoCo]]
+- [[https://youtu.be/9Yq67CjDqvw?t=107][Synthesizing Obama: Learning Lip Sync from Audio]]
