Updated a bunch more posts to org

--- a/content/blog/mental-overhead-of-data.org
+++ b/content/blog/mental-overhead-of-data.org
@@ -8,7 +8,7 @@ This isn't a post that I've outlined before hand, or even really considered in a
 
 Having said that, I've got a few points on my whiteboard that made something click, along with some thoughts that have been frustrating me for a little bit now.
 
-I like to use [Exist.io](https://exist.io), a service for collecting personal data. It's run a nice Australian duo and I have no issues with the service. All of the data collection is automated, and is explicitly authorised using regular OAuth.
+I like to use [[https://exist.io][Exist.io]], a service for collecting personal data. It's run a nice Australian duo and I have no issues with the service. All of the data collection is automated, and is explicitly authorised using regular OAuth.
 
 Having all of that data consolidated in one place is nice.
 
@@ -86,7 +86,7 @@ Is just removing something off a list satisfactory? Tell yourself "I'm done with
 
 Perhaps another contributor to all of this is generally using internet tools to track backlogs.
 
-I'm a big fan of [Trakt](https://trakt.tv) for example. No authority says "Thou must finish all movies or shows they intend to watch" but it's hard to not look at a list and wish to complete it.
+I'm a big fan of [[https://trakt.tv][Trakt.tv]] for example. No authority says "Thou must finish all movies or shows they intend to watch" but it's hard to not look at a list and wish to complete it.
 
 Finishing one list, in one medium alone is essentially impossible in a human lifetime, let alone all mediums you might appreciate.
 
