--- a/content/blog/automation-right.org
+++ b/content/blog/automation-right.org
@@ -6,23 +6,23 @@ title: "When automation goes horribly right"
 
 Today, I finally solved an issue that has been a pain in my ass for many months: successful automation
 
-Towards the latter end of 2016, Twitter announced a new suite of tools for businesses via a [blog post](https://blog.twitter.com/marketing/en_us/topics/product-news/2016/speed-up-customer-service-with-quick-replies-welcome-messages.html). There were a bunch of things from quick replies to profile-listed support hours which I'm sure were of some use.
+Towards the latter end of 2016, Twitter announced a new suite of tools for businesses via a [[https://blog.twitter.com/marketing/en_us/topics/product-news/2016/speed-up-customer-service-with-quick-replies-welcome-messages.html][blog post]]. There were a bunch of things from quick replies to profile-listed support hours which I'm sure were of some use.
 
 I used the latter but I also enabled "welcome messages": automated replies that would trigger when a "customer" opened your direct messages. In my case, I'm not a business so it was more just some silliness to add to my profile and it confused a few people along the way.
 
-![Someone receiving my automated message](/img/automation-right/confusion-one.png)
+[[./img/automation-right/confusion-one.png]]
 
 Over time, I'd forget that I had it enabled and then someone else would get caught out by it a few months later
 
-![](/img/automation-right/confusion-two.png)
+[[./img/automation-right/confusion-two.png]]
 
 and then it kept going at which point it started becoming a bit of a nuisance.
 
-![](/img/automation-right/confusion-three.png)
+[[./img/automation-right/confusion-three.png]]
 
 At this point, I was particularly annoyed and attempted to turn it off. I clearly remembered that there was a dashboard but do you think I could find it? That would be too easy!
 
-You can actually see a walkthrough of that very page right [here](https://youtu.be/H-n0hRO7oLk?t=75) but good luck finding it because it was actually removed.
+You can actually see a walkthrough of that very page right [[https://youtu.be/H-n0hRO7oLk?t=75][here]] but good luck finding it because it was actually removed.
 
 At first I didn't believe it. I just figured I had forgotten how to navigate to it but every month, I'd try once again to track it down with no luck. Eventually, I just resigned myself to the fact that some automation was running somewhere inside Twitter and I could never turn it off.
 
@@ -34,13 +34,13 @@ Obviously I couldn't just simply call Twitter and ask them.
 
 Fast forward to today and once more, a confused friend simply messaged me "?". I didn't even have to ask. Whatever this automation was, it never really seemed consistent either. Those who I talked to often would suddenly receive an automated response out of nowhere. Not that I could tell since it wasn't me talking.
 
-Finally I stumbled onto the Twitter Developer forum and... ah! [I wasn't alone!](https://twittercommunity.com/t/defunct-business-auto-dm-feature-no-longer-editable-and-still-sends/116561) I'm not crazy! Someone else remembers this thing!
+Finally I stumbled onto the Twitter Developer forum and... ah! [[https://twittercommunity.com/t/defunct-business-auto-dm-feature-no-longer-editable-and-still-sends/116561][I wasn't alone!]] I'm not crazy! Someone else remembers this thing!
 
-After a bit of confusion, it was cleared up that the Twitter API has a section for "welcome messages" which are these very same automated snippets. Using [twurl](https://github.com/twitter/twurl), a Twitter-modified version of curl, I could view those darn things finally.
+After a bit of confusion, it was cleared up that the Twitter API has a section for "welcome messages" which are these very same automated snippets. Using [[``https://github.com/twitter/twurl][twurl]], a Twitter-modified version of curl, I could view those darn things finally.
 
-![](/img/automation-right/welcome-messages.png)
+[[./img/automation-right/welcome-messages.png]]
 
-There they were. Sitting within the API the whole time although I'd guess that feature was only documented as part of the recent overhaul of Twitter's developer APIs. Even the original URL, [dashboard.twitter.com](https://dashboard.twitter.com), doesn't resolve anymore which is all the proof I needed that I'd been left out in the cold.
+There they were. Sitting within the API the whole time although I'd guess that feature was only documented as part of the recent overhaul of Twitter's developer APIs. Even the original URL, [[https://dashboard.twitter.com][dashboard.twitter.com]], doesn't resolve anymore which is all the proof I needed that I'd been left out in the cold.
 
 With some copy paste magic, I quickly wiped the slate clean. I was free!
 
