--- a/content/blog/day-xero.org
+++ b/content/blog/day-xero.org
@@ -4,7 +4,7 @@ tags: ["anxiety", "work"]
 title: "Day Xero"
 ---
 
-Technically it's Day 1 of my new job, a Graduate Site Reliability Engineer at [Xero](https://www.xero.com/nz/) but it hasn't officially started since I'm still on my way to the airport.
+Technically it's Day 1 of my new job, a Graduate Site Reliability Engineer at [[https://www.xero.com/nz/][Xero]] but it hasn't officially started since I'm still on my way to the airport.
 
 I told myself that when I finally got my first full time development position, I'd write a big post mortem about how long it took, how many times I was rejected and all that but since I haven't (yet), this is my offering to the Content Overlords.
 
